--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "framer-motion": "^11.12.0",
     "imagekitio-next": "^1.0.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
