--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.12.0",
     "imagekitio-next": "^1.0.1",
@@ -18,6 +19,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.6",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
